Document the workflow in the extras

--- a/pqHelp.html
+++ b/pqHelp.html
@@ -712,6 +712,7 @@ longer be recognized.</p>
 <p>
 Within the distribution folder <tt>PPQT</tt> there is a folder named <tt>extras</tt> with some miscellaneous documents:</p>
 <li><tt>en-common.txt</tt> is the file of common English scannos, pretty much the same as that distributed with Guiguts.</li>
+<li><tt>suggested-workflow.rtf</tt> describes the steps of post-proofing with PPQT in a logical sequence.</li>
 <li><tt>syntax-of-find-button-files.txt</tt> has sketchy documentation of the format of a Find button file.</li>
 <li><tt>header.html</tt> contains the opening of an HTML etext including the <tt>&lt;!DOCTYPE></tt> and<tt>&lt;head></tt> statements and the full CSS dictionary described in the PGDP Wiki under "CSS Cookbook" (but with some classnames modified to match PPQT conventions (which are different because NIH is why)).</li>
 <li><tt>empty-buttons.utf</tt> is a Find Buttons file that will clear all 24 buttons to <tt>(empty)</tt> status. Use it before setting up your own buttons to save, so as to avoid saving superfluous definitions.</li>
