fix css for fnote label

--- a/extras/header.html
+++ b/extras/header.html
@@ -306,7 +306,7 @@ blockquote, .blkquot {
 .footnote { /* style label and text within a footnote */
 	/*font-size: 90%;	optional make font 1-pt smaller than body */
 }
-.footnote .label { /* style the [nn] label left of footnote */
+.fnlabel { /* style the [nn] label left of footnote */
 	/*float:left;	optional: float left of footnote text */
 	text-align:left;	/* aligned left in span */
 	width:2.5em;		/* uniform width of [1] and [99] */
