issue 69 add mention of htmlFixes to extras writeup

--- a/pqHelp.html
+++ b/pqHelp.html
@@ -722,6 +722,8 @@ Within the distribution folder <tt>PPQT</tt> there is a folder named <tt>extras<
 <li><tt>fixupRE.utf</tt> loads a set of Find buttons to look for common formatting errors, modelled after Guiguts Fixup.</li>
 <li><tt>find-psep.utf</tt> loads a set of Find buttons to find and delete page separators.</li>
 <li><tt>clearTextMarkups.utf</tt> loads a set of Find buttons to find and delete block markup.</li>
+<li><tt>htmlFixes.utf</tt> loads Find buttons to convert small-cap text,
+superscripts, subscripts, Side notes, Illustrations, and typo markups to HTML.</li>
 <li><tt>syntax-of-find-button-files.txt</tt> has sketchy documentation of the format of a Find button file.</li>
 <li><tt>header.html</tt> contains the opening of an HTML etext including the <tt>&lt;!DOCTYPE></tt> and<tt>&lt;head></tt> statements and the full CSS style section described in the PGDP Wiki under "CSS Cookbook" (but with some classnames modified to match what PPQT generates).</li>
 </ul>
